Added find curation endpoint
